<resources>
    <string name="app_name">PAM23_CALC</string>
    <string name="main_simple">Simple</string>
    <string name="main_advanced">Advanced</string>
    <string name="main_about">About</string>
    <string name="main_exit">Exit</string>
    <string name="app_title">CALCULATOR</string>
    <string name="about_title">About:</string>
    <string name="about_author">Author: Mikołaj Rajczyk</string>
    <string name="about_version">v: 1.0.0</string>
    <!--simple and advanced usage-->
    <string name="calc_0">0</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>
    <string name="calc_mult">*</string>
    <string name="calc_div">/</string>
    <string name="calc_equals">=</string>
    <string name="calc_negate">+/-</string>
    <string name="calc_dot">.</string>
    <string name="calc_CCE">C/CE</string>
    <string name="calc_AC">AC</string>
    <string name="calc_bksp">DEL</string>
    <string name="calc_base_expr">0</string>
    <!--advanced usage-->
    <string name="calc_sin">SIN</string>
    <string name="calc_cos">COS</string>
    <string name="calc_tan">TAN</string>
    <string name="calc_log">LOG</string>
    <string name="calc_ln">LN</string>
    <string name="calc_percent">%</string>
    <string name="calc_sqrt">SQRT</string>
    <string name="calc_square">X^2</string>
    <string name="calc_pow">X^Y</string>
    <string name="calc_parentheses">()</string>
</resources>
