<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#202020" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:padding="5dp"
            android:id="@+id/calc_expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:clickable="false"
            android:gravity="bottom|end"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_bksp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_bksp" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_AC" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_cce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_CCE" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_negate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_negate" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_parentheses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_parentheses" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/advanced_sin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_sin" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_cos" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_tan" />

            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_ln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_ln" />
            <Space
                android:layout_width="3dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="21sp"
                android:text="@string/calc_percent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/advanced_sqrt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="23sp"
                android:text="@string/calc_sqrt" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_square"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_square" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_pow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_pow" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/advanced_log"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_log" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_7" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_8" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_9" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_div"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_4" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_5" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_6" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_mult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_mult" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_1" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_2" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_3" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_0" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_dot" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_equals" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/calc_plus" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
