<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#202020" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:padding="10dp"
            android:id="@+id/calc_expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:clickable="false"
            android:gravity="bottom|end"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:autoSizeMaxTextSize="40sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:visibility="visible"
            tools:visibility="visible"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_bksp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_bksp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_AC" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_cce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_CCE" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_negate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_negate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_7" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_8" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_9" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_div"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_4" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_5" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_6" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_mult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_mult" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_1" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_2" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_3" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_0" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_dot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_dot" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_equals" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/calc_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/calc_plus" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>