<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#202020" >

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="false"
        android:text="@string/app_title"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <Button
            android:id="@+id/menu_simple"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/main_simple"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/menu_advanced"/>

        <Button
            android:id="@+id/menu_advanced"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/main_advanced"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/menu_simple"
            app:layout_constraintBottom_toTopOf="@id/menu_about"/>

        <Button
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/main_about"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/menu_advanced"
            app:layout_constraintBottom_toTopOf="@id/menu_exit"/>

        <Button
            android:id="@+id/menu_exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/main_exit"
            android:layout_weight="1"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/menu_about"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>